--- a/LaTeX/ellipticdefinitions.tex
+++ b/LaTeX/ellipticdefinitions.tex
@@ -13,7 +13,8 @@ Since $F$ is a homogeneous polynomial of degree three, it suffices to check that
 	F_Y = 2Z^2 + 21Y^2 \label{deriv-2}\\
 	F_Z = 4YZ \label{deriv-3}
 \end{align}
-Suppose that $F_X = F_Y = F_Z = 0$ at a point $P = [X,Y,Z]$, \cref{deriv-1} implies that $X=0$.
+Suppose that $F_X = F_Y = F_Z = 0$ at a point $P = [X,Y,Z]$.
+\Cref{deriv-1} implies that $X=0$.
 \Cref{deriv-3} now implies that either $Y=0$ or $Z=0$.
 Either way, \cref{deriv-2} subsequently implies that $X = Y = Z = 0$, which is not a valid point in homogeneous coordinates.
 Therefore, there are no singular points on the curve $F$ and it is indeed an elliptic curve.
@@ -23,7 +24,7 @@ We list some basic properties of elliptic curves.
 	Let $F$ be a regular projective curve of degree at least 3. Then $F$ has at least one flex in $\pn[2]$.
 \end{theorem}
 \begin{proof}
-	Nope. % What the fuck to do about this?
+	I can't seem to find a proof of this anywhere. % What on earth to do about this?
 \end{proof}
 \subsubsection{The Addition Law on Elliptic Curves}
 % Bezout near here
@@ -37,6 +38,7 @@ We do not prove this in this document but direct readers to \cite{silverman2009}
 	\label{chord-tangent}
 \end{figure}
 The addition rests upon the so-called `chord-tangent~law', which is illustrated in \cref{chord-tangent}.
+% chord tangent example?
 Since an elliptic curve is cubic and regular, by definition, every line intersects it with multiplicity exactly three.
 This means that given two points (not necessarily distinct), the line on which those points lie (or the tangent line to the curve at the point, if the points are the same) will intersect the curve in exactly one other place.
 The idea of the chord-tangent law is that we can take any two points $P$ and $Q$ and define $P * Q$ to be this third point of intersection.
