--- a/LaTeX/finitefieldsdefinitions.tex
+++ b/LaTeX/finitefieldsdefinitions.tex
@@ -1,3 +1,4 @@
+\subsubsection{Finite fields}
 \begin{definition}
 	A field is a commutative, unital ring in which every non-zero element is invertible.
 \end{definition}
@@ -30,6 +31,7 @@ Thus, we have that $\fp[4] = \{0, 1, \alpha, \alpha + 1\}$.
 
 For simplicity's sake, from now on, when we refer to finite fields, we limit ourselves to ``simple'' finite fields of the form $\zn[p]$, and generally refer to these as $\fp$.
 
+\subsubsection{The Euclidean Algorithm}
 The question of finding inverses in $\zn$ has a well understood, general solution, which involves the euclidean algorithm.
 \begin{definition}
 	The euclidean algorithm takes two numbers $a,b \in \N$ and returns their \emph{greatest common divisor (gcd)} by repeated division with remainder.
