--- a/LaTeX/points.tex
+++ b/LaTeX/points.tex
@@ -5,10 +5,12 @@ The naïve approach, of course, is to simply run through all sets of points $(x,
 Despite this, a basic example of this method of counting is ran through in \cref{hasseweil}.
 
 There are a few approaches possible to take when considering the number of points on an elliptic curve over a finite field, though, and we will cover a number of them.
-\subsubsection{The Hasse-Weil Estimate and Schoof's Algorithm}
+\subsubsection{The Hasse-Weil Estimate}
 \label{hasseweil}
 The most fundamental theoretical result in finding the order of $E(\fp)$ is the Hasse-Weil theorem, which bounds the size of the group in terms of the prime modulus.
 The theorem was initially proved for elliptic curves by Helmut Hasse in \cite{hasse1936a}, \cite{hasse1936b} and \cite{hasse1936c}, and subsequently generalised to curves of higher genus by André Weil in \cite{weil1948}, proved by Pierre Deligne in \cite{deligne1974}.
 \input{h-w.tex}
+\subsubsection{Schoof's Algorithm}
+Schoof's algorithm here.
 \subsubsection{Gauss' Theorem}
 \input{gauss.tex}
