--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -7,7 +7,25 @@
 \input{header.tex}
 
 \begin{document}
-\maketitle
+\begin{titlepage}
+	\centering
+	% \includegraphics[width=0.15\textwidth]{example-image-1x1}\par\vspace{1cm}
+	{\scshape\LARGE Lancaster University \par}
+	\vspace{1cm}
+	{\scshape\Large MSci Mathematics Dissertation\par}
+	\vspace{1.5cm}
+	{\huge\bfseries Cubic Curves Over Finite Fields\par}
+	\vspace{2cm}
+	{\Large\itshape William Bolton\par}
+	\vfill
+	supervised by\par
+	Dr.~Nadia \textsc{Mazza}
+
+	\vfill
+
+% Bottom of the page
+	{\large \today\par}
+\end{titlepage}
 \tableofcontents
 \clearpage
 
