Recapitalise sections in dissertation

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -18,27 +18,27 @@
 \clearpage
 
 \section{Prerequisites}
-\subsection{Finite Fields}
+\subsection{Finite fields}
 \input{finitefieldsdefinitions.tex}
-\subsection{The Projective Plane}
+\subsection{The projective plane}
 \input{projectivedefinitions.tex}
-\subsection{Elliptic Curves}
+\subsection{Elliptic curves}
 \input{ellipticdefinitions.tex}
 \clearpage
 
 \section{Theory}
-\subsection{Elliptic Curves Over Finite Fields}
+\subsection{Elliptic curves over finite fields}
 \input{finiteelliptic.tex}
-\subsection{The Number of Points on an Elliptic Curve}
+\subsection{The number of points on an elliptic curve}
 \input{points.tex}
-\subsection{Lenstra's Algorithm}
+\subsection{Lenstra's factorisation algorithm}
 \input{lenstraalgorithm.tex}
 \clearpage
 
 \section{Discussion}
-\subsection{Example RSA Decryption}
+\subsection{Example RSA decryption}
 \input{rsa.tex}
-\subsection{Elliptic Curve Cryptography}
+\subsection{Elliptic curve cryptography}
 \input{ecc.tex}
 \clearpage
 
